Additions to the Java 9 modular support when running Java applications